# Generating-Gazebo-Environment-Labels

./: README.md
catvehicle/: CMakeLists.txt  package.xml
catvehicle/config/: control.yaml
catvehicle/include/catvehicle/: cont.hh
catvehicle/launch/: gazebo.launch.py  nodes.launch.py
catvehicle/src/: cat_control.py  cmd2gazebo.py  control.py  final.npy  lidar_cluster_copy.py  lidar_vel_temp.py  log.txt  logger.py  logic_building.ipynb  odom.cc  spawner.py  status_pub.py  test.py
catvehicle/src/pt/: 0.pt  1.pt  10.pt  1004.pt  1005.pt  1009.pt  1010.pt  1012.pt  1013.pt  1018.pt  1021.pt  1024.pt  1025.pt  1034.pt  1035.pt  1038.pt  1039.pt  1041.pt  1043.pt  105.pt  1051.pt  1056.pt  1057.pt  1058.pt  1066.pt  1071.pt  1074.pt  1076.pt  108.pt  1086.pt  1090.pt  1094.pt  1095.pt  1099.pt  11.pt  1100.pt  1106.pt  1113.pt  1115.pt  1122.pt  (+939 more)
catvehicle/urdf/: catvehicle.urdf.xacro  catvehicle_gazebo.xacro  catvehicle_laser_points_gazebo.xacro  catvehicle_velodyne_points_gazebo.xacro
catvehicle/world/: label.world
generate_labels/: CMakeLists.txt  package.xml
generate_labels/launch/: gz.launch.py  individual_test_gazebo.launch.py
generate_labels/rviz/: default.rviz
generate_labels/src/: boiler_code.py  test.ipynb
generate_labels/urdf/: backup.urdf.xacro  car_4w.urdf.xacro  car_4w1.urdf.xacro  car_4w2.urdf.xacro
